# downloadit

./: .gitignore  LICENSE  README.md  alembic.ini  cli.py  pyproject.toml  requirements.txt
models/: app_model.py
src/: __init__.py  alembic.ini  app.py  cli.py  constances.py
src/aio-downloadit/: app.py  exceptions.py
src/aio_downloadit/: app.py  constances.py  logs.py
src/aio_downloadit/models/: app_model.py
src/aiodownloader/: __init__.py  app.py  logs.py
src/downloadit/: app.py  exceptions.py  logs.py
src/migrations/: env.py
src/migrations/versions/: fce8ff4e06f9_.py
